# DeviceAccess-ModbusBackend

./: .rodare.json  CITATION.cff  CMakeLists.txt  README.md
config/: devMapFile.dmap  sigma_phi_FI0042250_RF_SLICE.xlmap  sigma_phi_FI004250.map  sigma_phi_FI004250_RF_SLICE.xlmap
include/: ModbusBackend.h
src/: ModbusBackend.cc
test/: devMapFile.dmap  dummy.map  testMapping.C  testModbus.C  testModbusConnection.C  testServer.C
tests/: CMakeLists.txt  devMapFile.dmap  dummy.map  testModbus.C
